--- a/style.css
+++ b/style.css
@@ -19,10 +19,18 @@ header {
   text-align: center;
   height: 50px;
   padding: 20px;
+  flex-basis: 0;
+  flex-grow: 999;
+  min-width: 50%;
 }
 
 .controls>input {
   margin: 10px;
+}
+
+.generator {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .generatedNames {
@@ -30,4 +38,6 @@ header {
   text-align: center;
   height: 50px;
   padding: 20px;
+  flex-basis: 20rem;
+  flex-grow: 1;
 }
